test/error/ast/ReturnIncompatibleType.mod
MODULE ReturnIncompatibleType;
PROCEDURE P(): INTEGER;
BEGIN
  RETURN 'a';
END P;
END ReturnIncompatibleType.
